--- a/sub_33.html
+++ b/sub_33.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<title>그린매거진</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta property="og:title" content="그린매거진">
 	<meta property="og:description" content="그린매거진 웹진을 만나보세요.">
@@ -14,67 +15,90 @@
 	<link rel="stylesheet" type="text/css" href="css/sub.css?ver=202502" />
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/script2.js?ver202502"></script>
-<style>
-:root {
-	--main-color: #EC6C44;
-	--text-color-small: #fff;
-	--text-color-title: #fff;
-	--text-color-title2: #000;
-	--box-bg-color: #FDF0EA;
-	--box-border-color: #000;
-	--box-text-color: #EEAF90;
-}
-.article-header-text h2 {
-	font-size: 5rem;
-}
-.quote-normal {
-	margin-bottom: 4rem;
-}
-.box-text-2 {
-	margin-top: 1rem;
-}
-.box-text-1 li,
-.box-text-2 li {
-	font-size: 1.8rem;
-	line-height: 1.5;
-    color: #2a2a2a;
-}
-.box-text-1 {
-	margin: 2rem 0;
-}
-.box-text-1 li b {
-	font-weight: 700;
-}
-.box-text-2 li {
-	padding-left: 2.5rem;
-	position: relative;
-	margin-bottom: 1rem;
-}
-.box-text-2 li::before {
-	content: "";
-	display: block;
-	width: 1.9rem;
-	height: 1.8rem;
-	background: url("contents/sub_33_icon.png") 0 0 no-repeat;
-	background-size: 100% 100%;
-	position: absolute;
-	left: 0;
-	top: 0.4rem;
-}
-.box-text-2 li strong {
-	background-color: var(--box-text-color);
-}
-@media (max-width: 767px) {
-    .article-header-text h3 {
-        font-size: 3rem;
-    }
-    .article-header-text h4 {
-        margin-bottom: 0;
-        margin-top: 1rem;
-    }
-}
-</style>
+	<style>
+		:root {
+			--main-color: #855792;
+			--text-color-small: #fff;
+			--text-color-title: #fff;
+			--text-color-title2: #fff;
+			--box-bg-color: #EFECF2;
+			--box-border-color: #000;
+			--box-text-color: #805D8F;
+		}
+
+		.article-header-text h2 {
+			font-size: 5rem;
+		}
+
+		.quote-normal {
+			margin-bottom: 4rem;
+		}
+
+		.box-text-2 {
+			margin-top: 1rem;
+		}
+
+		.box-text-1 li,
+		.box-text-2 li {
+			font-size: 1.8rem;
+			line-height: 1.5;
+			color: #2a2a2a;
+		}
+
+		.box-text-1 {
+			margin: 2rem 0;
+			text-align: center;
+			font-size: 1.8rem;
+		}
+
+		.box-text-1 li b {
+			font-weight: 700;
+		}
+
+		.box-text-2 li {
+			padding-left: 2.5rem;
+			position: relative;
+			margin-bottom: 1rem;
+		}
+
+		.box-text-2 li::before {
+			content: "";
+			display: block;
+			width: 1.9rem;
+			height: 1.8rem;
+			background: url("contents/sub_33_icon.png") 0 0 no-repeat;
+			background-size: 100% 100%;
+			position: absolute;
+			left: 0;
+			top: 0.4rem;
+		}
+
+		.box-text-2 li strong {
+			background-color: var(--box-text-color);
+		}
+
+		.dream-box h5 {
+
+			height: auto;
+			border-radius: 2rem;
+			padding: 0 3rem;
+			line-height: 4rem;
+			margin: 3rem auto 2rem;
+		}
+
+		@media (max-width: 767px) {
+			.article-header-text h3 {
+				font-size: 3rem;
+			}
+
+			.article-header-text h4 {
+				margin-bottom: 0;
+				margin-top: 1rem;
+			}
+		}
+	</style>
 </head>
+
 <body>
 	<header class="header" id="header"></header>
 	<main>
@@ -84,23 +108,23 @@
 					<div class="article-header-text">
 						<span>이로운 맛, 농업이 미래다</span>
 						<h2>
-							해발 600m에서 익어가는 것들
+							땅에서 일어나 <br>사람에게 닿기까지,<br>한 사람의 진심이 만든 <br>농산물 유통의 길
 						</h2>
 						<h4>
-							지리산피아골식품
+							농업회사법인㈜ 스톤
 						</h4>
 						<h3>
-							김미선 대표
+							양예나 대표
 						</h3>
 						<div class="article-meta">
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진</span>
-							<span>조재무</span>
+							<span>김준후</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">추천</span>
-							<span>기술지원과 황대용 농업연구관</span>
+							<span> 기술지원과 황대용 농업연구관</span>
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -115,10 +139,12 @@
 			<div class="article-body-wrap">
 				<div class="article-prologue">
 					<p>
-						해발 600m, 시간의 속도가 느리게 흐르는 산골에서 김미선 대표는 장을 익히고 삶을 익히며 버티는 법을 배워왔다. 고로쇠 수액 한 방울, 온도 1도, 소비자의 한마디까지 놓치지 않는 이곳의 장은 자연과 사람이 함께 겪어낸 시간의 결과물이다.
+						창원에서 함안으로 ‘굴러온’ 한 사람이 있었다. 저렴한 임대료를 보고 시작한 작은 카페는 어느새 마을의 소통 허브가 되었고, 그곳을 찾은 멜론 농부 한 사람이 양예나 대표의
+						삶을 완전히 바꿔 놓았다. 잘 팔리지 않던 B급 멜론 한 통에서 시작된 유통 사업은 점차 쌀까지 확장되었고, 결국 500곳의 거래처를 잇는 농업회사법인㈜ 스톤으로 성장했다.
+						하루하루를 성실하고 정직하게 쌓아 올리며 스스로의 길을 넓혀가고 있는 양예나 대표의 이야기다.
 					</p>
 				</div>
-				<div class="article-text">			
+				<div class="article-text">
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
@@ -127,16 +153,31 @@
 						</div>
 					</div>
 					<h4>
-						피아골에서 시작된 장 빚는 시간
+						굴러온 돌, 마을의 중심이 되다
 					</h4>
 					<p>
-						지리산 피아골에서 태어나고 자란 김미선 대표는 식당을 운영하던 부모님 곁에서 늘 직접 만든 음식을 보며 자랐다. 장은 어머니에게서 배웠고, 자연스레 대학 졸업 후 곧바로 창업의 길을 선택했다. 당시만 해도 장류 시장에는 이미 강자들이 즐비했다. 후발주자로 뛰어들기 위해 그는 ‘어떻게 하면 차별화된 장을 만들 수 있을까’를 깊이 고민했다. 그때 눈에 들어온 것이 바로 고향 피아골에서 나는 ‘고로쇠 수액’이었다. 보통 장은 1월에서 3월 사이에 담그는데, 이 시기가 고로쇠 수액이 오르는 시기와 정확히 겹친다. 김미선 대표는 이 자연의 타이밍에서 자신만의 답을 찾았다.
+						이제는 고향 창원보다 함안이 더 정겹다는 양예나 대표. 그녀가 처음 카페 문을 연 곳은 함안군 법수면 석무동이었다.
 					</p>
 					<p>
-						“예전에는 지리산 고로쇠가 정말 유명했는데, 이제는 전국 곳곳에서 고로쇠가 나오다 보니 지역 농가들의 판로가 많이 줄었어요. 그래서 ‘이 좋은 물을 장에 쓰면 어떨까’라는 생각이 들었고, 동시에 이를 통해 지역 주민들과 함께 소득을 만들 수 있겠다는 확신도 들었죠.”
+						“지명에 ‘석(石)’ 자가 들어가지만, 실제로는 돌 하나 없는 동네예요. 그런데 제가 마치 ‘굴러온 돌’처럼 이곳에 자리 잡은 것 같더라고요. 그 느낌을 살려 카페 이름을
+						짓고 싶었어요. 영어 이름을 쓰고 싶기도 했고, 누구나 쉽게 읽을 수 있는 단어면 좋겠다 싶어서 ‘스톤(STONE)’이라고 정했죠.”
 					</p>
 					<p>
-						무엇보다 피아골의 자연 환경은 그 자체로 제품 경쟁력이었다. 이곳은 해발 600m 고지의 깊은 골짜기 안쪽에 자리해 농사나 축사가 거의 없다. 주민 대부분이 식당과 숙박업으로 생계를 이어가는 만큼, 공해와 농약에서도 비교적 자유롭다. 구례 읍내보다 기온이 5도가량 낮아 발효에도 유리한 조건을 갖추고 있다.
+						처음 문을 열었을 때만 해도 ‘3개월이면 문을 닫을 거다’ 라는 말이 동네에 공공연히 돌았다. 그러나 그 예상은 보기 좋게 빗나갔다. 굴러온 돌처럼 들어온 양예나 대표는
+						어느새 동네에 자연스럽게 스며들었다. 원래 활발하고 먼저 말도 잘 거는 성격 덕분에 어르신들과 주민들과도 금세 친구가 되었고, 그렇게 아는 얼굴이 동네 곳곳에 늘어났다.
+						점심시간이면 카페는 사람들로 북적였고, 어느새 ‘대나무숲’ 같은 공간이 되어 있었다.
+					</p>
+					<p>
+						“‘이번에 무슨 농사가 망했다더라’, ‘우리 집 송아지가 태어났다’, ‘고양이가 새끼 낳았다는데 혹시 키울 사람 있냐’ 같은 이야기들이 하루에도 몇 번씩 오갔어요. 그러면
+						제가 바로 ‘저쪽 사장님이 고양이 찾으시던데요!’ 하고 연결해주고요. 그렇게 자연스럽게 마을의 ‘소통 허브’가 됐죠.”
+					</p>
+					<p>
+						사실 양예나 대표의 목표는 단순히 ‘카페 사장’에 머무는 것이 아니었다. 사람들의 이야기가 오가고, 서로가 연결되는 공간을 만들고 싶었다. 그 형태가 정확히 어떤 모습일지는
+						알 수 없었지만, ‘공간을 통해 무언가를 잇는 일’이 자신과 잘 맞는다는 감각만은 분명했다.
+					</p>
+					<p>
+						그러던 때, ‘내일을 만드는 함안청년 창업가’ 지원 사업을 알게 됐고, 아이디어를 고민하던 중 문득 이런 생각이 스쳤다. ‘내가 시골에 있으니까 농산물 유통을 해볼까?’ 그
+						순간부터였다. 양예나 대표는 카페를 넘어 농산물 유통, 더 나아가 농사의 세계로 자연스럽게 발을 옮기기 시작했다.
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
@@ -146,127 +187,147 @@
 						</div>
 					</div>
 					<h4>
-						청정한 자연에서 스마트 발효까지
+						멜론 한 통에서 시작된 농산물 유통의 길
 					</h4>
 					<p>
-						청정한 자연 아래에서 지리산피아골식품의 장은 처음부터 끝까지 이곳에서 빚어진다. 콩 세척부터 삶기, 메주 성형, 발효와 건조, 고로쇠 간수 담그기, 숙성, 그리고 분리 작업까지 모든 공정을 한곳에서 이어간다.
+						농산물 유통의 출발점은 카페 손님으로 찾아오던 멜론 농부였다. 함안의 특산품인 속 노란 ‘노을멜론’은 첫 출하 때는 제값을 받지만, 끝물이나 B급 상품은 가격이 거의
+						형성되지 않는 현실이었다. 그 이야기를 들은 양예나 대표는 문득 이런 생각을 했다. ‘B급은 팔아볼 수 있을 것 같은데?’ 주스로 만들 수도 있고, 컵 과일로도 판매할 수
+						있으니 활용법은 무궁무진했다. SNS로 홍보하면 반응이 올 것이라는 확신도 있었다.
 					</p>
 					<p>
-						“가을이 지나면 곧 ‘장 농사’ 준비에 들어가요. 지역 농가에서 콩을 수매해 세척하고, 콩을 푹 삶은 뒤 사각형 메주로 성형합니다. 그 메주를 1차 발효시키고, 다시 자연 건조를 거쳐 고로쇠 수액에 소금을 풀어 만든 간수에 담가요. 보통 40~50일가량 담가둔 뒤 분리 작업을 하면, 위로 뜬 맑은 물은 간장이 되고 아래 남은 메줏덩어리가 된장이 되죠.”
+						“처음에는 SNS로 판매를 시작했는데, 인플루언서와 연결되면서 주문이 본격적으로 늘었어요. 판매 공간이 없어서 주차장에 천막 두 개를 치고 이른바 ‘천막 매장’으로
+						장사했죠. 바람 불면 천막이 날아가고, 민원도 들어오고, 아기돼지 삼형제처럼 기둥을 붙들며 장사하던 시절이에요. 그런데 노을멜론이 사람들에게 생소한 과일이다 보니 오히려
+						특별하게 느껴졌던 것 같아요. 마침 시장에서도 당도 높은 프리미엄 과일을 찾던 때라 타이밍이 정말 잘 맞아떨어졌어요.”
 					</p>
 					<p>
-						지리산피아골식품 장의 가장 큰 특징은 이 단계에서 드러난다. 일반 물이 아닌 고로쇠 수액을 간수에 사용하기 때문에, 장의 감칠맛과 깊이가 자연스럽게 강화된다.
-					</p>
-					<div class="article-image">
-						<div class="article-image-container">
-							<figure>
-								<img src="contents/sub_33_image_3.jpg">
-							</figure>
-						</div>
-					</div>
-					<p>
-						“소비자들이 드셔보시고는 ‘왜 이렇게 감칠맛이 나요?’ 하고 많이 물어보세요. 특별한 재료를 넣은 건 없고, 수액이 지닌 자연스러운 단맛과 미네랄이 장의 풍미를 끌어올려 주는 거죠.”
+						시작은 단 한 농가였지만 ‘스톤에 가면 멜론이 잘 팔린다더라’는 소문이 퍼지면서 이 집 저 집에서 멜론을 들고 찾아오기 시작했다. 그렇게 양예나 대표는 또 한 번 확신을
+						얻었다. 다만 한 철 장사라는 점이 조금 아쉬웠다. ‘사계절 내내 할 수 있는 일은 뭘까?’ 며칠을 굴리던 고민 끝에, 떠오른 답은 단순했다. 매일 먹고, 언제든 필요한 것
+						바로 ‘쌀’이었다.
 					</p>
 					<p>
-						고로쇠 외에도 원료는 전부 국내산만 사용하며, 그중에서도 1등급만을 고집한다. 이러한 원칙 덕분에 전통식품 인증을 받을 수 있었지만, 프리미엄 원재료를 지속적으로 사용하는 일은 언제나 비용과의 싸움이다. 그럼에도 김미선 대표는 값싼 원료와 타협하지 않는다. 좋은 장을 위해 반드시 지켜야 할 기준이라고 믿기 때문이다.
-					</p>
-					<p>
-						원료 외에 김미선 대표가 매년 크게 고군분투하는 대상이 하나 더 있다. 바로 ‘날씨’다. 기후변화는 전통 발효 과정에도 예외 없이 침투했다. 한겨울에도 이례적으로 따뜻한 날이 이어지거나, 반대로 갑작스러운 한파가 길어지는 등 기온 변화가 심해지면서 항아리 속 미생물들도 불규칙한 환경에 ‘스트레스’를 받는다. 해마다 발효와 숙성 조건이 달라지니, 장맛 역시 일정하게 유지하기 어려워진다.
-					</p>
-					<p>
-						“손님들이 ‘해마다 맛이 달라요’라고 하면 정말 곤란하잖아요. 그 편차를 조금이라도 줄이기 위해 농촌진흥청과 함께 스마트팜 시스템을 도입했습니다. 숙성에 유리한 미생물이 잘 자랄 수 있는 조건을 찾는 연구를 계속하고 있어요.”
-					</p>
-					<p>
-						발효실에서는 온도와 습도를 정밀하게 조절하며 1차 발효를 관리하고, 이후 숙성과 발효는 자연 환경과 데이터가 서로 보완하는 방식으로 진행된다. 농촌진흥청의 분석에 따르면 이 시스템은 발효 안정성에 확실한 도움이 되고 있으며, 지리산피아골식품은 그 결과를 믿고 긴 호흡의 실험을 이어가고 있다.
+						“제가 농사에 대한 이해도가 정말 ‘0’이었어요. 그냥 해보자는 마음으로 일단 논부터 임대하고, 트랙터까지 들여왔죠. 첫 시도는 600평 규모의 고구마 농사였는데, 사실
+						농사는 땅과 지역 특성을 제대로 알고 시작해야 하잖아요. 그런데 저는 그냥 ‘내가 고구마 좋아하니까’라는 이유 하나로 심어버린 거예요. 당연히 망했죠. 알고 보니 그 땅은
+						고구마가 절대 잘 자랄 수 없는, 배수가 나쁜 곳이었어요. 그 일을 겪고 나서야 농부들이 하는 일이 얼마나 어려운지 비로소 깨달았어요.”
 					</p>
 					<div class="article-image dual-image-column">
 						<div class="article-image-container">
 							<figure>
+								<img src="contents/sub_33_image_3.jpg">
+							</figure>
+							<figure>
 								<img src="contents/sub_33_image_4.jpg">
 							</figure>
+						</div>
+					</div>
+					<p>
+						농부들의 어려움을 직접 겪고 나자, 양예나 대표는 스스로에게 물었다. ‘기술도 없고, 경험도 부족한 내가 정말 잘할 수 있는 일은 뭘까?’ 답은 멀리 있지 않았다. ‘판매와
+						홍보’였다. 마침 카페를 운영하며 함안에서 농사 짓는 친구를 만나게 됐고, 그때부터 두 사람은 자연스럽게 역할을 나눠 함께 농사를 꾸려가기 시작했다. 양예나 대표는 서류
+						작업과 영업, 홍보 등 유통과 비즈니스를 맡고, 그 친구는 실제 농사 현장을 전담했다. 그렇게 농사와 판매의 역할이 명확해지자, 양예나 대표의 일은 한층 더 탄탄해졌다.
+					</p>
+					<p>
+						“쌀 판매를 본격적으로 해보려고 아예 트럭을 샀어요. 처음에는 함안 정미소에서 쌀을 10포대씩 사 와서 시작했죠. 창원 출신이다 보니 그쪽 식당들을 하나하나 찾아다니며 밥
+						맛을 봤어요. 쌀 상태가 조금 아쉽다 싶으면, 다음 날 또 가서 먹어보고, 며칠 뒤 다시 찾아가고. 그러고 나서 조심스럽게 제안해요. ‘제가 함안에서 농사도 짓고, 쌀도
+						유통하고 있어요. 한 번만 써보세요. 괜찮으시면 계속 갖다 드릴게요.’ 그렇게 처음에는 10포대를 팔고, 번 돈으로 다시 10포대를 사 오고, 또 팔고. 그렇게 밤마다
+						트럭을 몰고 다니며 영업을 뛰는 날들이 이어졌어요.”
+					</p>
+					<p>
+						“소비자들이 드셔보시고는 ‘왜 이렇게 감칠맛이 나요?’ 하고 많이 물어보세요. 특별한 재료를 넣은 건 없고, 수액이 지닌 자연스러운 단맛과 미네랄이 장의 풍미를 끌어올려
+						주는 거죠.”
+					</p>
+					<p>
+						고로쇠 외에도 원료는 전부 국내산만 사용하며, 그중에서도 1등급만을 고집한다. 이러한 원칙 덕분에 전통식품 인증을 받을 수 있었지만, 프리미엄 원재료를 지속적으로 사용하는
+						일은 언제나 비용과의 싸움이다. 그럼에도 김미선 대표는 값싼 원료와 타협하지 않는다. 좋은 장을 위해 반드시 지켜야 할 기준이라고 믿기 때문이다.
+					</p>
+					<p>
+						원료 외에 김미선 대표가 매년 크게 고군분투하는 대상이 하나 더 있다. 바로 ‘날씨’다. 기후변화는 전통 발효 과정에도 예외 없이 침투했다. 한겨울에도 이례적으로 따뜻한
+						날이 이어지거나, 반대로 갑작스러운 한파가 길어지는 등 기온 변화가 심해지면서 항아리 속 미생물들도 불규칙한 환경에 ‘스트레스’를 받는다. 해마다 발효와 숙성 조건이
+						달라지니, 장맛 역시 일정하게 유지하기 어려워진다.
+					</p>
+					<p>
+						“손님들이 ‘해마다 맛이 달라요’라고 하면 정말 곤란하잖아요. 그 편차를 조금이라도 줄이기 위해 농촌진흥청과 함께 스마트팜 시스템을 도입했습니다. 숙성에 유리한 미생물이 잘
+						자랄 수 있는 조건을 찾는 연구를 계속하고 있어요.”
+					</p>
+					<p>
+						발효실에서는 온도와 습도를 정밀하게 조절하며 1차 발효를 관리하고, 이후 숙성과 발효는 자연 환경과 데이터가 서로 보완하는 방식으로 진행된다. 농촌진흥청의 분석에 따르면 이
+						시스템은 발효 안정성에 확실한 도움이 되고 있으며, 지리산피아골식품은 그 결과를 믿고 긴 호흡의 실험을 이어가고 있다.
+					</p>
+					<div class="article-image">
+						<div class="article-image-container">
 							<figure>
 								<img src="contents/sub_33_image_5.jpg">
 							</figure>
 						</div>
 					</div>
 					<h4>
-						산골에서 쌓아 올린 가능성의 길 
+						여전히 진심을 판매하는 사람
 					</h4>
 					<p>
-						어려움이 없었던 건 아니었다. 소비자 피드백은 때로는 상처였고, 시간이 지나 보니 자양분이기도 했다. 처음엔 ‘짜다’, ‘달다’ 같은 지적에 자존심이 많이 상했지만, 어느 순간부터 김미선 대표는 ‘소비자 중심’으로 제품을 고쳐 나가기 시작했다. 청국장의 냄새를 줄인 버전을 개발하고, 젊은 층 입맛에 맞는 장을 계속 시도했다. 그러면서도 연세 있는 고객들의 취향도 놓치지 않았다. 이렇게 ‘맛’에 대한 고민이 깊어지다 보니, 자연스럽게 제품의 외연도 넓어져 갔다. 지리산피아골식품의 또 다른 축은 바로 ‘확장’이다. 장류 제조에 머물지 않고 시래기 된장국, 우거지 된장국, 청국장 찌개 등 다양한 밀키트 제품을 꾸준히 개발해왔다.
+						10포대로 시작했던 일이 어느새 거래처 500곳으로 확대됐다. 직접 짓는 논의 규모는 크지 않아 생산량 자체는 많지 않다. 대신 함안에서 쌀 농사를 짓는 여러 농가의 물량을
+						모아 함께 판매하는 방식으로 유통 구조를 다졌다. 전국에는 이미 ‘쌀 맛’으로 이름난 지역이 많기 때문에, 그 사이에서 경쟁력을 갖추기 위해 스톤이 선택한 차별점은, 주문이
+						들어오면 2~3일 안에 도정해 바로 보내는 시스템이다.
 					</p>
 					<p>
-						“데이터를 보니까 된장 1kg 한 통을 재구매하는 데 평균 3개월이 걸리더라고요. ‘좋은 장을 더 빨리, 더 자주 드실 수 있게 하려면 어떻게 해야 할까’를 고민하다 보니 자연스럽게 밀키트라는 해답에 닿았습니다.”
+						“제가 차별화할 수 있는 건 ‘도정한 지 얼마 되지 않은 쌀’이더라고요. 여기에 제가 직접 농사를 짓고 트럭을 몰아 배달까지 하다 보니 그런 진정성을 좋게 봐주시는 분들이
+						많습니다.”
 					</p>
 					<p>
-						밀키트 제품군이 늘어나면서 매출도 함께 성장했다. 특히 흥미로운 점은 밀키트가 된장 판매를 잠식하는 것이 아니라 오히려 ‘입문용’ 역할을 한다는 사실이다. 시래기 된장국 밀키트를 맛본 소비자가 “이 된장 따로도 판매하나요?”라고 문의하고, 이어 해당 된장을 다시 구매하는 선순환 구조가 형성됐다.
+						지금의 판매망을 만들기까지의 길은 결코 평탄하지 않았다. 상한 과일을 모두 폐기했던 날, 반품을 막기 위해 한 박스 한 박스 손수 갈아엎으며 울었던 날, 팔지 못한 농산물을
+						트럭에 싣고 아파트 단지 앞에 세워놓은 채 하루 종일 서 있었던 날까지. 처음에는 마스크를 쓰고 조용히 서 있었지만 곧 마음을 다잡았다. 부끄러움과 자존심을 내려놓고 먼저
+						사람들에게 말을 걸기 시작하자, 어느 날은 하루 매출이 100만 원을 넘기기도 했다.
 					</p>
 					<p>
-						제품이 다양해지며 소비층도 점차 넓어졌고, 자연스럽게 ‘어디에, 어떻게 팔 것인가’에 대한 고민도 깊어졌다. 판로 개척은 지금도 그에게 가장 어려운 과제다. 오프라인 위주였던 판매 구조는 코로나 이후 온라인 중심으로 빠르게 재편됐다. 현재 매출의 약 10%는 수출, 나머지는 국내 판매인데, 그중에서도 온라인 비중이 크다. 김미선 대표는 수많은 채널을 경험하며 ‘지리산피아골식품과 맞는 길’을 찾아왔다. 
+						그렇게 차곡차곡 쌓인 경험 덕분일까. 올해에는 뜻밖의 기회가 찾아왔다. 보관이 까다로운 복숭아 유통 제안이 들어온 것이다. 보관 창고가 따로 없던 양예나 대표는 카페 전체를
+						임시 저온창고로 꾸미고, 또 한 번 ‘해보자’는 마음으로 판매에 나섰다. 결과는 완판. 그렇게 스톤의 가능성은 다시 한 번 넓어졌다.
+					</p>
+					<p>
+						이제 양예나 대표의 다음 목표는 ‘5kg 포장’을 제대로 자리 잡게 하는 일이다. 지금까지는 식당 위주로 납품하며 10kg, 20kg 단위로 판매해왔지만, 앞으로는 가정용
+						소량 포장 시장에서도 스톤만의 색을 보여주고 싶다는 것이다. 그래서 양예나 대표는 오늘도 ‘지금 할 수 있는 일’을 묵묵히 이어가고 있다. 농산물을 제값에, 제때, 좋은
+						사람들에게 건네기 위해서. 그 단순하고도 성실한 도전이 스톤을 스톤답게 만들어가고 있다.
+						<i class="icon_last"></i>
 					</p>
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
-								<img src="contents/sub_33_image_6.jpg">
+								<img src="contents/sub_33_image_7.jpg">
 							</figure>
 						</div>
 					</div>
-					<!-- <blockquote class="quote-normal">
-						기록을 남기다 보니 관찰이 세밀해지고, 작물에 대한 이해도 깊어졌어요. 그렇게 쌓이다 보니 생산량도, 품질도 확실히 좋아졌습니다
-					</blockquote>
-					<h4>
-						땅을 다르게 보고, 농사의 길을 새롭게 쓰다 
-					</h4> -->
-					<p>
-						특히 쿠팡 로켓배송에 입점하기까지의 과정은 말 그대로 ‘눈물의 수업료’였다. 지리산에서 평택까지 냉장 화물차를 보냈다가 온도 기준이 맞지 않아 통째로 반려된 적도 있었고, 첫 발주액에서 운송비를 제하고 나면 사실상 남는 게 없던 시기도 길었다. 자체 창고를 둘 여력조차 없어 결국 물류 대행까지 도입하며 버텨야 했다. 그럼에도 김미선 대표는 “이 모든 과정을 몸으로 겪었기에, 이제야 조금씩 길이 보인다”고 말한다.
-					</p>
-					<p>
-						“동일한 고민을 하는 분들에게 꼭 드리고 싶은 말은, ‘많이 울면 돼요’예요. 좋은 플랫폼에 입점한다고 해서 그게 끝이 아니잖아요. 소비자에게 알려지기까지는 시간이 반드시 필요해요. 그 마이너스 구간을 어느 정도 버텨야, 나중에 매출이 오르는 시점이 오더라고요.”
-					</p>
-					<p>
-						김미선 대표는 올해로 피아골에 내려온 지 19년을 맞았다. 그 사이, 초기에는 보기 어려웠던 청년 여성농업인들이 하나둘씩 터를 잡는 변화를 직접 목격해 왔고, 청년 여성농업인 활동을 통해 다른 지역의 깊은 골짜기에서 자신과 비슷한 삶을 살아가는 동료들을 만나면서 그는 ‘혼자가 아니구나’라는 안도감을 얻었다. 그래서 앞으로는 더 많은 이들에게 ‘농촌에도 분명한 비전이 있다’는 사실을 보여주고 싶다. 그의 바람은 단순한 개인의 성공을 넘어선다. 변화하는 기후와 급변하는 시장 속에서도 서로의 버팀목이 되어, 이 산골에서 함께 미래를 만들어가는 일. 어쩌면 지금 피아골에서 서서히 익어가고 있는 것은 장뿐만 아니라, 이곳 청년 농업인들의 가능성 그 자체인지도 모른다. 
-						<i class="icon_last"></i>
-					</p>
 					<article>
 						<div class="dream-box">
 							<h4>
-								지리산피아골식품 대표 상품
+								농업회사법인(주) 스톤 대표 상품
 							</h4>
 							<div class="dream-box-image">
 								<figure>
 									<img src="contents/sub_33_image_box_1.jpg">
 								</figure>
-								<figure>
-									<img src="contents/sub_33_image_box_2.jpg">
-								</figure>
 							</div>
-							<!-- <h5>
-								맛있으면서도 건강한 선택!<br>
-								영광 검정보리샌드 
-							</h5> -->
+							<h5>
+								메뚜기쌀
+							</h5>
 							<div class="box-text-2">
 								<ul>
 									<li>
-										지리산 고로쇠 수액으로 간수를 빚어 만든 프리미엄 <strong>고로쇠된장, 고로쇠간장, 찹쌀고추장</strong>은 피아골의 자연과 전통 발효가 만들어낸 대표 장류입니다. 된장은 깊고 구수한 감칠맛이, 간장은 맑고 깔끔한 감칠맛이 살아나며, 찹쌀고추장은 은은한 단맛과 매콤함이 조화롭게 어우러집니다.
+										스톤이 취급하는 쌀 가운데서도 가장 사랑받는 ‘메뚜기쌀’. 함안 들녘에서 자란 신선한 햅쌀로, 주문이 들어오면 2~3일 안에 바로 도정해
+										보내드립니다.
 									</li>
 									<li>
-										고로쇠 <strong>우거지된장국</strong>은 구수한 우거지 향과 깊고 진한 된장 맛을 그대로 살려 한 끼 식사로 손색이 없으며, <strong>고로쇠 청국장찌개</strong>는 청국장의 진한 풍미에 고로쇠 수액 기반 장맛이 더해져 부담 없이 구수하고 담백한 맛을 완성합니다.  
+										농부의 땀으로 지은 쌀을 가장 신선한 순간에 건네고 싶은 마음, 그리고 소비자에게 ‘오늘 도정한 쌀’을 전하고자 하는 한 사람의 진심이 모여
+										완성된 결과물입니다.
 									</li>
 								</ul>
 							</div>
-							<!-- <div class="box-text-1">
-								<ul>
-									<li><b>• 문의:</b> 진가정미소 010-8963-2332</li>
-								</ul>
-							</div> -->
+							<div class="box-text-1">
+								문의: 010-5090-6993
+							</div>
 
 
 							<div class="dream-box-qr">
-								<a href="https://www.jiripia.kr" target="_blank">
+								<a href="https://www.instagram.com/haman_stone577" target="_blank">
 									<figure>
 										<img src="contents/sub_33_qr.jpg">
 									</figure>
-									<span>지리산피아골식품 <br>제품 보러 가기</span>
+									<span>농업회사법인(주) 스톤<br>인스타그램</span>
 								</a>
 							</div>
 						</div>
@@ -278,4 +339,5 @@
 	</main>
 	<footer class="footer" id="footer"></footer>
 </body>
+
 </html>
