--- a/sub_42.html
+++ b/sub_42.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<title>그린매거진</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta property="og:title" content="그린매거진">
 	<meta property="og:description" content="그린매거진 웹진을 만나보세요.">
@@ -14,70 +15,85 @@
 	<link rel="stylesheet" type="text/css" href="css/sub.css?ver=202502" />
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/script2.js?ver202502"></script>
-<style>
-	:root {
-		--main-color: #FDF6EA;
-		--text-color-title: #000;
-		--text-color-title2: #025CB0;
-		--text-color-title3: #7C4598;
-	}
-.header-mono .article-header-text h2,
-.article-meta span {
-	color: var(--text-color-title);
-}
-.article-meta {
-	margin: 0 auto;
-}
-.article-body {
-	background-color: var(--main-color);
-	padding-bottom: 10rem;
-}
-.description {
-	font-size: 1.2rem;
-	margin-top: 0.5rem;
-}
-.hotple-text-right {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-.hotple-info-qr {
-	display: flex;
-	align-items: flex-end;
-	gap: 1rem;
-}
-.hotple-info-qr figure {
-	width: 10rem;
-}
-.hotple-info-qr span {
-	font-size: 1.4rem;
-	font-weight: 500;
-}
-@media (max-width:767px) {
-	.hotple {
-		padding-top: 5rem;
-	}
-	.hotple-title h3 {
-		font-size: 2.5rem;
-	}
-	.hotple-title figure {
-		margin-top: -3.8rem;
-	}
-	.hotple-text {
-		padding: 0 2rem;
-		display: flex;
-		flex-direction: column;
-		gap: 3rem;
-	}
-	.hotple-text-left p {
-		margin-bottom: 2rem;
-	}
-	.hotple-text-right {
-		margin-left: 1.5rem;
-	}
-}
-</style>
+	<style>
+		:root {
+			--main-color: #FDF6EB;
+			--text-color-title: #000;
+			--text-color-title2: #3B6CB8;
+			--text-color-title3: #7C4598;
+		}
+
+		.header-mono .article-header-text h2,
+		.article-meta span {
+			color: var(--text-color-title);
+		}
+
+		.article-meta {
+			margin: 0 auto;
+		}
+
+		.article-body {
+			background-color: var(--main-color);
+			padding-bottom: 10rem;
+		}
+
+		.description {
+			font-size: 1.2rem;
+			margin-top: 0.5rem;
+		}
+
+		.hotple-text-right {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+		}
+
+		.hotple-info-qr {
+			display: flex;
+			align-items: flex-end;
+			gap: 1rem;
+		}
+
+		.hotple-info-qr figure {
+			width: 10rem;
+		}
+
+		.hotple-info-qr span {
+			font-size: 1.4rem;
+			font-weight: 500;
+		}
+
+		@media (max-width:767px) {
+			.hotple {
+				padding-top: 5rem;
+			}
+
+			.hotple-title h3 {
+				font-size: 2.5rem;
+			}
+
+			.hotple-title figure {
+				margin-top: -3.8rem;
+			}
+
+			.hotple-text {
+				padding: 0 2rem;
+				display: flex;
+				flex-direction: column;
+				gap: 3rem;
+			}
+
+			.hotple-text-left p {
+				margin-bottom: 2rem;
+			}
+
+			.hotple-text-right {
+				margin-left: 1.5rem;
+			}
+		}
+	</style>
 </head>
+
 <body>
 	<header class="header black" id="header"></header>
 	<main>
@@ -91,7 +107,7 @@
 							<span>구혜진</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진제공</span>
-							<span>부산 워케이션 거점센터・디어먼데이 경주 춘추관점・온앤오프・도동서원 한옥 워케이션</span>
+							<span>자라섬 워케이션 센터・로컬스티치 크리에이터 타운 서교・팜프라촌・공간7</span>
 						</div>
 					</div>
 				</div>
@@ -106,10 +122,10 @@
 				</div>
 				<div class="hotple-title">
 					<h3 class="hotple-title-top">
-						항구도시에서 만나는 새로운 업무 방식
+						북한강변에서 누리는 워라벨
 					</h3>
 					<h3 class="hotple-title-bottom">
-						부산 워케이션 거점센터
+						자라섬 워케이션 센터
 					</h3>
 					<figure>
 						<img src="contents/sub_42_top_1.jpg">
@@ -118,8 +134,10 @@
 				<div class="hotple-text">
 					<div class="hotple-text-left">
 						<p>
-							부산항이 내려다보이는 오션뷰와 옛 도심의 정취를 느낄 수 있는 시티뷰, 두 가지 매력을 모두 즐길 수 있는 부산 워케이션 거점센터. 약 60명이 동시에 이용할 수 있는 규모로, 1인 전용 업무 공간은 물론, 테라스·화상 회의실 등 다양한 시설이 마련되어 있다. 라운지에서는 업무와 함께 자유로운 네트워킹이 가능하다. <br>
-							또한 부산형 워케이션 프로그램은 거점센터 외에도 여러 위성센터와 파트너십 공간을 자유롭게 이용할 수 있도록 운영된다. 중구·동구·서구·영도구·금정구 등 지역별로 연계된 숙박시설을 통해 장기 체류형 근무도 가능해, 일과 여행이 자연스럽게 어우러지는 부산 만의 워케이션 환경을 제공한다. 
+							가평읍 제방길에 위치한 자라섬 워케이션 센터는 488㎡ 규모로 서울에서 가장 가까운 워케이션 공간이다. 1인 업무 공간, 회의실, 폰부스, 휴게시설을 갖춰 원격
+							근무에 최적화된 환경을 제공하며, 북한강변의 청정한 자연 속에서 효율적으로 업무를 처리할 수 있다. <br>자라섬 캠핑장과 연계한 워케이션 관광 상품과 숙박지원금
+							지급 제도를 운영하며, 가평군 내 숙소 이용 시 약 1박 당 최대 5만 원을 환급 받을 수 있다. 업무 후에는 강변 산책로를 거닐거나 자라섬 일대의 카페와 맛집을
+							탐방할 수 있다. 서울 근교에서 일과 휴식의 균형을 찾는다면, 자연 속에서 업무를 진행할 수 있는 자라섬 워케이션 센터를 추천한다.
 							<i class="icon_last"></i>
 						</p>
 						<div class="hotple-image">
@@ -135,36 +153,37 @@
 						<div>
 							<div class="hotple-info info-location">
 								<h5>
-									부산 워케이션 거점센터
+									자라섬 워케이션 센터
 								</h5>
 								<ul>
 									<li>
 										<span>주소</span>
-										부산광역시 동구 중앙대로 214번길  7-8 24층
+										경기도 가평군 가평읍 가평제방길 16 2층
 									</li>
 									<li>
 										<span>인접 교통</span>
-										부산역(도보 3분)
+										가평역(도보 10분)
 									</li>
 									<li>
 										<span>오피스 현황</span>
-										수용인원 60명
+										1인석 14석, 모션데스크 3석, 회의실 2개, 3인석 3개
 									</li>
 								</ul>
 							</div>
 							<div class="hotple-info info-tour">
 								<h5>주변 여행지</h5>
 								<h6>
-									깡깡이예술마을
+									남이섬
 								</h6>
 								<p>
-									조선소 노동자들이 배의 녹을 제거하며 내던 ‘깡깡’ 소리가 울려 퍼지던 그곳이, 페인팅 아트, 라이트 프로젝트 등 예술과 문화 공간으로 재탄생했다.
+									메타세쿼이아 길과 은행나무 길이 아름다운 섬. 드라마 촬영지로 유명하며, 사계절 각기 다른 풍경을 선사한다.
 								</p>
 							</div>
 						</div>
 						<div class="hotple-info-qr">
 							<figure>
-								<a href="https://www.busaness.com" target="_blank"><img src="contents/sub_42_qr_1.jpg"></a>
+								<a href="https://workation.gp.go.kr/" target="_blank"><img
+										src="contents/sub_42_qr_1.jpg"></a>
 							</figure>
 							<span>
 								홈페이지
@@ -181,10 +200,10 @@
 				</div>
 				<div class="hotple-title">
 					<h3 class="hotple-title-top">
-						전통과 현대가 만나는
+						홍대 감성 속 일과 삶이 함께하는
 					</h3>
 					<h3 class="hotple-title-bottom">
-						디어먼데이 경주 춘추관점
+						로컬스티치 크리에이터 타운 서교
 					</h3>
 					<figure>
 						<img src="contents/sub_42_top_2.jpg">
@@ -193,8 +212,10 @@
 				<div class="hotple-text">
 					<div class="hotple-text-left">
 						<p>
-							황리단길 인근에 위치한 디어먼데이 경주는 전통 한옥 속에서 일과 휴식을 동시에 누릴 수 있는 워케이션 공간이다. 업무 공간은 전 좌석 모션데스크를 갖추고, 총 11석 규모의 워케이션 라운지에는 전 좌석 모니터, 6인 회의실, 스피커, 마이크, 케이블 젠더 등 업무 장비가 완비되어 있다. 복합기(인쇄, 복사, 스캔), 커피추출기, 정수기가 갖춰진 편의시설은 물론, 업무 중 휴식을 위한 빈백과 야외 테이블도 마련되어 있다.<br>
-							업무 공간에서 도보 1분 거리의 전통 한옥 숙소는 인원에 따라 숙박할 수 있으며, 한옥 특유의 운치를 느낄 수 있다. 업무를 마친 후에는 인근 황리단길을 산책하며 경주의 트렌디한 카페와 맛집을 탐방하거나, 천년 고도의 역사 유적지를 둘러보며 문화적 영감을 얻을 수 있다. 
+							홍대 인근 한적한 주거지에 자리 잡은 로컬스티치 크리에이터 타운 서교는 도시 창작자들이 자유롭게 일하고 교류할 수 있는 복합 문화 공간이다. 홍대, 합정, 망원역에서
+							도보 5~10분 거리에 자리 잡고 있다. 2층에는 120평 규모의 넓고 쾌적한 코워킹 공간이 마련돼 있어 개인 업무부터 소규모 팀 프로젝트까지 다양한 업무 수행
+							방식에 유연하게 대응할 수 있다. 통창 너머로 나무와 계절을 보고 느끼며 영감을 얻을 수 있다. 집중하여 일할 수 있는 독립 데스크와 자유롭게 의견을 나누는 라운지,
+							회의실과 프로그램 룸이 갖춰져 있다. 여가를 즐기거나 운동을 할 수 있는 공용 주방, 운동실, 세탁실 등이 있어 일과 삶의 새로운 균형을 경험할 수 있다.
 							<i class="icon_last"></i>
 						</p>
 						<div class="hotple-image">
@@ -210,36 +231,37 @@
 						<div>
 							<div class="hotple-info info-location">
 								<h5>
-									디어먼데이 경주 워케이션 라운지
+									로컬스티치 크리에이터 타운 서교
 								</h5>
 								<ul>
 									<li>
 										<span>주소</span>
-										경상북도 경주시 대경로 4821-5, 경주 춘추관
+										서울시 마포구 월드컵북로5길 41
 									</li>
 									<li>
 										<span>인접 교통</span>
-										경주역(차량 11분)
+										홍대입구역/합정역/망원역 (도보5~10분)
 									</li>
 									<li>
 										<span>오피스 현황</span>
-										11석
+										고정석, 라운지, 회의실, 프로그램 룸
 									</li>
 								</ul>
 							</div>
 							<div class="hotple-info info-tour">
 								<h5>주변 여행지</h5>
 								<h6>
-									무열왕릉
+									경의선숲길
 								</h6>
 								<p>
-									넓고 탁 트인 공간에 커다란 구릉들이 있어 고즈넉하게 산책할 수 있다.
+									홍대입구역에서 연남동까지 이어지는 산책로로, 감성적인 카페와 상점이 곳곳에 있다.
 								</p>
 							</div>
 						</div>
 						<div class="hotple-info-qr">
 							<figure>
-								<a href="https://dearmonday.io/branch/list/5" target="_blank"><img src="contents/sub_42_qr_2.jpg"></a>
+								<a href="https://localstitch.town" target="_blank"><img
+										src="contents/sub_42_qr_2.jpg"></a>
 							</figure>
 							<span>
 								홈페이지
@@ -256,10 +278,10 @@
 				</div>
 				<div class="hotple-title">
 					<h3 class="hotple-title-top">
-						도심과 바다 사이,
+						남해의 촌라이프를 실현할 수 있는
 					</h3>
 					<h3 class="hotple-title-bottom">
-						울산 동구 워케이션 센터 온앤오프
+						팜프라촌
 					</h3>
 					<figure>
 						<img src="contents/sub_42_top_3.jpg">
@@ -268,8 +290,10 @@
 				<div class="hotple-text">
 					<div class="hotple-text-left">
 						<p>
-							울산 최초의 워케이션 센터로, 효율적인 업무 환경과 휴식을 모두 고려한 다양한 공간을 갖추고 있다. 센터에는 1인용 부스 15석과 독립된 프라이빗룸 2개, 팀 단위 협업이 가능한 회의실이 마련되어 있다. 듀얼 모니터, 프린터, 복합기 등 업무에 필요한 장비가 완비되어 있으며, 탕비실에는 냉장고, 커피머신 등 편의시설이 갖춰져 있다.<br>
-							또한 월 2회 운영되는 ‘온앤오프데이(ON&OFF Day)’ 프로그램에서는 다양한 분야의 전문가를 초청해 자기계발, 업무 역량 향상, 힐링을 주제로 한 강의와 체험이 진행되며, 울산 워케이션 대표 거점으로 자리매김하고 있다. 무엇보다 일과 쉼을 자유롭게 즐겨볼 수 있는 울산만의 워케이션 명소로 사랑받고 있다. 
+							경상남도 남해군 상주면에 위치한 팜프라촌은 자연을 마음껏 누리며 각자의 촌라이프를 실현할 수 있는 마을이다. 로컬 라이프를 살아보는 스테이, 목공방, 워크 라운지 등
+							다양한 로컬 경험을 제공하며, 일상에서 쉽게 접할 수 없는 남해의 여유로운 분위기와 느린 호흡의 삶을 몸으로 체험할 수 있다.<br>
+							20평 내외 실내 작업 공간과 넓은 야외 작업 공간이 있는 목공방, 편하게 휴식을 취하거나 업무를 할 수 있는 라운지가 마련되어 있다. 숲속의 작은 집 감성을 담아낸
+							아담한 스테이에서는 자연을 감상하며, 마을 투어, 무비나잇, 트레일러닝, 시금치 농사 체험, 목공 프로그램과 같이 나에게 맞는 촌라이프를 경험할 수 있다.
 							<i class="icon_last"></i>
 						</p>
 						<div class="hotple-image">
@@ -285,20 +309,20 @@
 						<div>
 							<div class="hotple-info info-location">
 								<h5>
-									울산 동구 워케이션 센터 온앤오프
+									팜프라촌
 								</h5>
 								<ul>
 									<li>
 										<span>주소</span>
-										울산 동구 해수욕장10길 38 5층
+										경상남도 남해군 상주면 양아리 530-4
 									</li>
 									<li>
 										<span>인접 교통</span>
-										태화강역(차량 20분)
+										남해시외벅스터미널 (차량 30분)
 									</li>
 									<li>
 										<span>오피스 현황</span>
-										1인 부스 15석, 프라이빗룸 2석, 8인&12인 회의실
+										워크라운지
 									</li>
 								</ul>
 							</div>
@@ -307,16 +331,17 @@
 									주변 여행지
 								</h5>
 								<h6>
-									대왕암공원
+									상주은모래비치
 								</h6>
 								<p>
-									신라 문무왕의 전설이 깃든 바위섬을 품은 해안 공원. 산책로와 등대가 어우러진 일출 명소다. 
+									금산의 절경을 병풍으로 삼은 상주은모래비치는 넓은 백사장과 윤슬, 울창한 송림이 아름다운 공간이다.
 								</p>
 							</div>
 						</div>
 						<div class="hotple-info-qr">
 							<figure>
-								<a href="https://ulsanworkation.com" target="_blank"><img src="contents/sub_42_qr_3.jpg"></a>
+								<a href="https://www.farmfravillage.com/farmfravillage" target="_blank"><img
+										src="contents/sub_42_qr_3.jpg"></a>
 							</figure>
 							<span>
 								홈페이지
@@ -333,10 +358,10 @@
 				</div>
 				<div class="hotple-title">
 					<h3 class="hotple-title-top">
-						선비의 정신이 머무는 공간에서 일하고 사색하는
+						제주의 들과 산에 둘러싸인 프라이빗 워케이션
 					</h3>
 					<h3 class="hotple-title-bottom">
-						도동서원 한옥 워케이션
+						공간7
 					</h3>
 					<figure>
 						<img src="contents/sub_42_top_4.jpg">
@@ -345,8 +370,10 @@
 				<div class="hotple-text">
 					<div class="hotple-text-left">
 						<p>
-							세계문화유산으로 등재된 도동서원 옆, 도동유교문화원의 한옥 워케이션은 역사와 자연, 일과 휴식을 모두 아우르는 특별한 워케이션 프로그램이다. 공유 사무실은 무료로 이용할 수 있으며, 듀얼 모니터, 인터넷, 회의실 등 기본적인 업무 환경이 갖춰져 있다. <br>
-							가족형 워케이션에 최적화되어 부모가 업무나 휴식에 집중하는 동안, 자녀는 전문 강사와 함께 비슬산 숲 체험, 문화관광해설사와 함께하는 서원 탐방, 자연과 곤충 체험 등 다양한 무료 체험 프로그램에 참여할 수 있다. 저녁에는 한옥 숙소에서 고즈넉한 마당을 바라보며 하루의 피로를 풀고, 전통의 운치 속에서 온전한 휴식을 누릴 수 있다. 400년 역사의 은행나무가 지키는 도동서원 워케이션에서 일과 휴식의 균형을 찾길 바란다. 
+							공간7은 약 1만 5,000평 규모의 워케이션 복합 공간이다. 한라산 아래 중산간 지대에 자리한 이곳은 고목과 들판, 오름이 둘러쌓인 조용한 환경을 제공한다. 객실은
+							소규모 이용자를 위한 스테이형 6채와 기업 단위 워케이션·리트릿을 위한 레지던스형 6채로 구성된다. 각 객실에는 업무나 학습이 가능한 테이블이 마련되어 있으며, 객실
+							이용자에게만 개방되는 프라이빗 라운지는 제주의 들판과 산의 풍경이 파노라마처럼 펼쳐져 있다. 라운지는 외부 자극을 줄이고 자연과 시선이 연결되도록 구성되어, 이용자가
+							조용히 머물며 생각을 정리하기 좋은 환경을 제공한다.
 							<i class="icon_last"></i>
 						</p>
 						<div class="hotple-image">
@@ -365,20 +392,20 @@
 						<div>
 							<div class="hotple-info info-location">
 								<h5>
-									도동유교문화관
+									공간7
 								</h5>
 								<ul>
 									<li>
 										<span>주소</span>
-										대구 달성군 구지면 구지서로 716
+										제주특별자치도 제주시 구좌읍 번영로 2133-50
 									</li>
 									<li>
 										<span>인접 교통</span>
-										서대구역(차량 45분)
+										제주공항(차량 50분)
 									</li>
 									<li>
 										<span>오피스 현황</span>
-										사전 예약 필수
+										스테이 6채, 레지던스 6채, 프라이빗 라운지
 									</li>
 								</ul>
 							</div>
@@ -387,16 +414,16 @@
 									주변 여행지
 								</h5>
 								<h6>
-									도동서원
+									안돌오름
 								</h6>
 								<p>
-									가을이면 노랗게 물든 큰 은행나무가 서원을 감싸며, 조용히 걷기 좋은 한적한 공간이다. 
+									편백나무와 푸른 초원이 어우러진 오름으로 산책길이 동그랗게 펼쳐져 있다.
 								</p>
 							</div>
 						</div>
 						<div class="hotple-info-qr">
 							<figure>
-								<a href="https://www.dsworcation.com/page/program_3.php" target="_blank"><img src="contents/sub_42_qr_4.jpg"></a>
+								<a href="https://gonggan7.com" target="_blank"><img src="contents/sub_42_qr_4.jpg"></a>
 							</figure>
 							<span>
 								홈페이지
@@ -410,4 +437,5 @@
 	</main>
 	<footer class="footer black" id="footer"></footer>
 </body>
+
 </html>
