--- a/sub_44.html
+++ b/sub_44.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="ko">
+
 <head>
 	<title>그린매거진</title>
-	<meta charset="utf-8"/>
+	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta property="og:title" content="그린매거진">
 	<meta property="og:description" content="그린매거진 웹진을 만나보세요.">
@@ -14,130 +15,173 @@
 	<link rel="stylesheet" type="text/css" href="css/sub.css?ver=202502" />
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/script2.js?ver202502"></script>
-<style>
-	:root {
-		--main-color: #7F8F59;
-		--text-color-small: #fff;
-		--text-color-title: #fff;
-		--text-color-title2: #fff;
-		--input-box-color: #7F8F59;
-	}
+	<style>
+		:root {
+			--main-color: #33859F;
+			--text-color-small: #fff;
+			--text-color-title: #fff;
+			--text-color-title2: #fff;
+			--input-box-color: #33859F;
+		}
 
 
-.article-header-text h2 {
-	font-family: 'YUniverse-B';
-	font-size: 4.8rem;
-	font-weight: 600;
-	letter-spacing: -0.1rem;
-	color: #000;
-}
-.article-header-text h3 {
-	font-family: Paperlogy-5Medium;
-	font-size: 4rem;
-}
-.article-header-text h4 {
-	margin-bottom: 0.2rem;
-}
-.article-text {
-	margin-top: 10rem;
-	margin-bottom: 15rem;
-}
-.quote-normal {
-	font-size: 2.5rem;
-	font-family: 'YUniverse-B';
-	font-weight: 600;
-	width: 70%;
-	word-break: keep-all;
-}
-.quote-normal::before, .quote-normal::after {
-	display: none;
-}
-.town-left {
-	position: relative;
-	z-index: 3;
-}
-.town-right {
-	position: relative;
-	z-index: 1;
-}
-.town-box {
-	margin-bottom: 4rem;
-	grid-template-columns: 1fr 1.2fr;
-	position: relative;
-}
-.bottom-image {
-	position: relative;
-}
-.town-graphic {
-	position: absolute;
-	z-index: 2;
-}
-.article-image.big-image {
-	margin-bottom: 10rem;
-}
-.article-image.big-image figure {
-	margin-bottom: 0.5rem;
-}
-.town-right.bottom-image {
-	justify-content: flex-end;
-}
-.graphic-1 {
-	bottom: 2%;
-	right: 2%;
-	width: 15%;
-}
-figure.graphic-2 {
-	top: -5%;
-	right: -120%;
-	width: 8%;
-}
-figure.graphic-3 {
-	bottom: 0%;
-	right: -5%;
-	width: 40%;
-}
-figure.graphic-4 {
-	top: 0;
-	left: 0;
-	width: 85%;
-}
-@media (max-width:767px) { 
-	.article-header-text h2 {
-		font-size: 2.5rem;
-	}
-	.article-image.big-image {
-		width: 100%;
-		margin-top: 0.5rem;
-	}
-	.town-box {
-		margin-bottom: 0.5rem;
-	}
-	figure.graphic-1 {
-		width: 30%;
-		right: 0;
-		top: auto;
-		left: auto;
-		bottom: 0;
-		transform: translateY(-10%);
-	}
-	figure.graphic-2 {
-	    top: auto;
-	    bottom: 0;
-	    right: 20%;
-	    left: auto;
-	    width: 10%;
-	}
-	figure.graphic-3 {
-	    top: -20%;
-	}
-	figure.graphic-4 {
-	    bottom: 0;
-	    width: 60%;
-	}
-}
+		.article-header-text h2 {
+			font-family: 'YUniverse-B';
+			font-size: 4.8rem;
+			font-weight: 600;
+			letter-spacing: -0.1rem;
+			color: #000;
+		}
 
-</style>
+		.article-header-text h3 {
+			font-family: Paperlogy-5Medium;
+			font-size: 4rem;
+		}
+
+		.article-header-text h4 {
+			margin-bottom: 0.2rem;
+		}
+
+		.article-text {
+			margin-top: 10rem;
+			margin-bottom: 15rem;
+		}
+
+		.quote-normal {
+			font-size: 2.5rem;
+			font-family: 'YUniverse-B';
+			font-weight: 600;
+			width: 70%;
+			word-break: keep-all;
+		}
+
+		.quote-normal::before,
+		.quote-normal::after {
+			display: none;
+		}
+
+		.town-left {
+			position: relative;
+			z-index: 3;
+		}
+
+		.town-right {
+			position: relative;
+			z-index: 1;
+		}
+
+		.town-box {
+			margin-bottom: 4rem;
+			grid-template-columns: 1.2fr 1fr;
+			position: relative;
+		}
+
+		.town-box.reverse {
+			grid-template-columns: 1fr 1.2fr;
+		}
+
+		.bottom-image {
+			position: relative;
+		}
+
+		.town-graphic {
+			position: absolute;
+			z-index: 2;
+		}
+
+		.article-image.big-image {
+			margin-bottom: 10rem;
+		}
+
+		.article-image.big-image figure {
+			margin-bottom: 0.5rem;
+		}
+
+		.town-right.bottom-image {
+			justify-content: flex-end;
+		}
+
+		.graphic-1 {
+			top: 0;
+			left: 22%;
+			width: 10%;
+			transform: translateY(-50%);
+		}
+
+		.graphic-2 {
+			top: 0;
+			right: 3%;
+			width: 18%;
+			transform: translateY(-100%);
+		}
+
+		.graphic-3 {
+			bottom: 0%;
+			left: 30%;
+			width: 20%;
+		}
+
+		.graphic-4 {
+			bottom: 0;
+			left: 35%;
+			width: 12%;
+			transform: translateY(10%);
+		}
+
+		.graphic-5 {
+			top: 0;
+			right: 0;
+			width: 10%;
+			transform: translateY(-50%);
+		}
+
+		.article-image {
+			position: relative;
+		}
+
+		@media (max-width:767px) {
+			.article-header-text h2 {
+				font-size: 2.5rem;
+			}
+
+			.article-image.big-image {
+				width: 100%;
+				margin-top: 0.5rem;
+			}
+
+			.town-box {
+				margin-bottom: 0.5rem;
+			}
+
+			figure.graphic-1 {
+				width: 30%;
+				right: 0;
+				top: auto;
+				left: auto;
+				bottom: 0;
+				transform: translateY(-10%);
+			}
+
+			figure.graphic-2 {
+				top: auto;
+				bottom: 0;
+				right: 20%;
+				left: auto;
+				width: 10%;
+			}
+
+			figure.graphic-3 {
+				top: -20%;
+			}
+
+			figure.graphic-4 {
+				bottom: 0;
+				width: 60%;
+			}
+		}
+	</style>
 </head>
+
 <body>
 	<header class="header" id="header"></header>
 	<main>
@@ -147,25 +191,25 @@ figure.graphic-4 {
 					<div class="article-header-text">
 						<span>방구석 시골 영화관</span>
 						<h2>
-							글자를 배우고, <br>인생을 시로 다시 쓰다
+							사라지는 바다에서<br>이어지는 숨의 기록
 						</h2>
-						<!-- <h4>부토 오너 셰프</h4> -->
 						<h3>
-							칠곡 가시나들
+							물꽃의 전설
 						</h3>
 						<p>
-							여든이 넘어 글자를 배우면서 세상을 다시 읽게 된 할머니들. 그들의 글씨는 서툴지만, 그 서툼 속에 피어난 문장은 오히려 진짜 문학의 온도를 품고 있다. 장면마다 잔잔히 흘러나오는 할머니들의 시를 통해, 영화는 말한다. 세상에서 가장 따뜻한 시는, 살아 있는 삶 속에서 태어난다고.
+							아흔여섯 살 해녀의 마지막 숨과 서른아홉 살 아기 해녀의 첫 호흡이 맞물리는 곳, 삼달리 바다는 한 편의 기록 영화처럼 펼쳐진다. ‘물꽃의 전설’은 사라져가는 제주
+							바다와 해녀들의 기억, 그리고 세대를 잇는 숨비소리를 6년에 걸쳐 담아낸 시간의 기록이다.
 						</p>
 						<div class="article-meta">
 							<span class="b">보러가기 </span>
-							<span>쿠팡플레이 ・ 웨이브 ・ U+모바일tv</span><br>
+							<span>왓챠 ・ 웨이브 ・ 쿠팡플레이</span><br>
 							<span class="b">글</span>
 							<span>장희주</span>
 							<span class="pipe">ㅣ</span>
 							<span class="b">사진</span>
 							<span>네이버 영화</span><br>
-							<span class="b">자료</span>
-							<span>한국관광공사 포토코리아 박성근 & 김지호</span><br>
+							<!-- <span class="b">자료</span>
+							<span>한국관광공사 포토코리아 박성근 & 김지호</span><br> -->
 						</div>
 					</div>
 					<div class="article-header-image">
@@ -187,26 +231,24 @@ figure.graphic-4 {
 						</div>
 					</div>
 					<h4>
-						글자를 읽는다는 건, 세상을 다시 여는 일 
+						숨과 기억을 품은 바다
 					</h4>
 					<p>
-						‘1938년 조선총독부는 모든 학교에서 한글 교육을 금지, 일본어 사용을 강제했다.’
+						지팡이에 의지해 바다로 향하는 96세 현순직 대상군(해녀 계급 중 가장 높은 계급) 해녀의 걸음은 비록 느리지만, 물속으로 몸을 던지는 순간만큼은 여전히 인어처럼 가볍다.
+						그녀는 “막 헤엄쳐서 가야 해”라고 웃으며 지난 여정을 회고한다. 독도에서 3년을 물질하며 보냈던 시간, 숨을 견디다 정신을 잃은 이모를 끌어올렸던 순간, 이어도를 노래하며
+						고통을 잊으려 했던 해녀들의 숨비소리까지. 그의 기억은 바다의 결처럼 깊게 이어진다. 영화는 단순한 기록을 넘어, 한 세대가 살아낸 삶을 고스란히 펼쳐 보이는 아카이브가
+						된다.
 					</p>
 					<p>
-						영화의 시작은 조용하지만 묵직하다. 이 자막이 뜨는 순간, 단지 ‘글을 배우지 못한 세대’의 이야기가 아니라 지워진 이름과 목소리를 되찾는 기록임을 깨닫게 된다. 
+						무엇보다 현순직 해녀가 잊지 못하는 장면이 있다. 물살을 읽고, 바위 지형을 외우고, 숨을 길게 붙들어야만 들어갈 수 있는 곳 ‘들물여’. 해녀만 알고, 해녀만 건널 수
+						있는 그 비밀스러운 바닷속 풍경에는 한때 붉고 푸르스름한 물꽃이 나무처럼 피어올랐다. 물꽃이 흐드러지게 피어 있던 그 자리에는 전복과 소라 같은 해산물도 끝없이 넘쳐났다고
+						한다.
 					</p>
 					<p>
-						<칠곡가시나들은> 인생 팔십 줄에 들어서 한글과 사랑에 빠진, 칠곡군 약목면 복성2리 일곱 할머니들의 이야기를 담고 있다. 2015년부터 ‘칠곡늘배움학교’에 다니기 시작한 할머니들은 난생처음 시험도 보고, 커닝도 하고, 농땡이도 피워가며 ‘가갸거겨’를 익혀간다. 
+						하지만 영화 속 바다는 더 이상 그 시절의 바다가 아니다. 물꽃이 시들고, 소라도 감태도 보이지 않는 빈 자리들만 남아 있다. 현순직 해녀는 바다가 아픈 것 같아 자꾸만
+						자신의 탓을 한다. “바다가 부모라. 부모도 바다만큼 주지 못해.” 그 말은 한평생 바다에 빚지고 산 사람의 죄책감이자, 그럼에도 끝내 바다를 미워할 수 없는 고백이다.
+						그리고 그 삶들은 모두 바다에서 숨을 빌려 살아온 사람들이다.
 					</p>
-					<p>
-						그래서일까. 할머니들에게 한글을 읽는 일은 곧 세상을 다시 읽는 일이 된다. 시장에 나가 간판을 하나하나 읽어내는 장면은 그 자체로 경이롭다. ‘오골계, 생닭, 노계, 삼계’. 그리 거창한 문장도, 특별한 글자도 아니지만, 할머니들이 간판을 또박또박 읽어 내려갈 때마다 세상은 새롭게 열린다.
-					</p>
-					<p>
-						카메라는 이들의 일상을 큰 장치 없이 담아낸다. 빨래터에서 빨래를 하고 잠깐 쉬며 막걸리 한잔 기울이는 모습, 무릎과 허리 통증으로 병원에 가는 모습, 드라마를 보며 깔깔 웃는 장면들. 겉으로 보면 특별할 것 없는 하루의 반복이지만, 작은 하루하루가 모여 한 사람의 세계를 이룬다는 것 <칠곡가시나들>이 말하는 배움의 진짜 얼굴이다.
-					</p>
-					<!-- <blockquote class="quote-normal">
-						“다음에 다시 태어나도 네 친구 할 끼야.”
-					</blockquote> -->
 					<div class="article-image">
 						<div class="article-image-container">
 							<figure>
@@ -215,56 +257,58 @@ figure.graphic-4 {
 						</div>
 					</div>
 					<h4>
-						이래도 시고, 저래도 시다 
+						사라지는 바다에서 이어지는 숨
 					</h4>
 					<p>
-						할머니들은 한글을 깨친 것에서 한 걸음 더 나아가, ‘시를 쓰는 사람’이 되었다. 매일 밥을 짓듯 한 글자 한 글자 눌러쓰며 마음을 담고, 그렇게 적은 시는 어느새 마을의 풍경이 되었다. 할머니들이 쓴 시는 맞춤법은 틀리고 띄어쓰기는 엉망이지만, 그 한 줄 한 줄엔 ‘배움의 진심’과 ‘사랑의 기억’이 묻어난다.
+						영화는 또 다른 해녀, 30대의 채지애 씨를 따라간다. 그는 해녀인 어머니의 뒷바라지 속에 육지에서 대학을 마치고 헤어디자이너로 일했다. 하지만 헤어드라이어 소리가
+						바닷소리처럼 들릴 만큼 향수병이 깊어지자 결국 고향으로 돌아왔고, 어머니의 반대를 무릅쓰고 해녀의 길을 택했다. 처음 바다에 들어선 날, 깊이를 가늠하지 못해 테왁에 매달려
+						덜컥거리며 첫 인사를 나눴고, 물멀미에 헤롱거리며 돌아온 날도 적지 않았다. 그럼에도 ‘눈만 감으면 소라가 보이는 중독성’이 그녀를 다시 바다로 이끌었다.
 					</p>
 					<p>
-						곽두조 할머니는 아들은 “뭐하러 공부하노”라며 말리지만, 며느리는 “시어머니 똑똑해지라고 공부하라”고 응원한다고 웃으며 말했다. 그래서 할머니의 시에는 이런 구절이 남았다. ‘우리 며느리가 공부한다고 자꾸 하라칸다. 시어마이 똑똑하라고 자꾸 하라킨다.’
+						현순직 해녀는 그런 채지애 씨를 유독 아낀다. “저 아이가 제일 마음씨가 곱다.”며 그는 자신의 노하우를 자연스레 전하며 그녀를 이끌고, 마침내 두 사람은 전설처럼 회자되던
+						들물여의 물꽃을 찾아 나선다. 평생 그 풍경을 가슴에 품어왔던 현순직 해녀에게는 그리움의 자리로 향하는 길이고, 채지애 씨에게는 어릴 적부터 들어온 전설의 실제 모습을
+						확인하는 순간이다. 이 장면은 영화의 감정이 가장 깊게 고조되는 정점이 된다.
 					</p>
 					<p>
-						강금연 할머니는 아들에게 편지를 쓴다. “아들노코 얼마나 조안는데 이제 그이들 하태 미아하다 내 몸따가 성하지를 모타이 아들 미느리 욕 빈다 자나깨나 걱정해주는 아들이 참 고맙다 밥 잘 무라, 어미 시다.’ 맞춤법도 띄어쓰기도 엉망이지만, 그 서툰 문장들은 오히려 문학보다 더 진한 문학이다. 편지를 다 쓴 할머니는 혹시 우표가 떨어질까 걱정돼 손가락으로 꾹꾹 눌러 붙인다. 그렇게 빨간 우체통 속으로 사라진 편지는 며칠 뒤 아들의 집에 도착한다. 그리고 다시 강금연 할머니에게로 되돌아본다. 
-					</p>
-					<p>“사랑하는 어머니, 편지 받고 깜짝 놀랐습니다. 정성스러운 어머니의 글씨에 눈물이 났습니다.” 이 순간 한글은 단순한 문자나 기술이 아니라, 사랑을 건네는 다리가 된다. 
-					</p>
-					<p>
-						박금분 할머니는 말한다. ‘가마이 보니까 시가 참 만타. 여기도 시, 저기도 시, 시가 천지삐까리다.’
+						하지만 그곳엔 기억과 다른 바다가 있다. 빛이 사라지고, 꽃이 시들고, 생명이 떠난 자리. 현순직 해녀는 말없이 물 위에 앉아 달빛을 바라본다. 그 장면은 마치 바다와
+						작별을 말하지 못해 망설이는 사람의 뒷모습 같았다. 바다는 그녀의 집이었고, 생계였고, 젊음이었고, 그리움이었고, 애증이었다. 그리고 이미 충분히 많은 것을 내어준
+						바다였다.
 					</p>
 					<p>
-						정말 그렇다. <칠곡가시나들>의 세계는 온통 시로 가득하다. 사랑을 몰라 부끄럽다고 읊는 박월선 할머니의 시, 하루하루를 살아내며 써 내려간 이름 없는 시들이, 이 영화 안에서 모두 하나의 삶으로 이어진다. 
+						‘물꽃의 전설’은 무엇보다 제주에서 사라져가는 것을 끝까지 붙잡으려는 사람들의 이야기다. 해녀도, 제주어도, 바다도. 이제는 옛 모습을 잃어가며 조금씩 사라져가는 제주
+						고유의 풍경들이다. 영화는 그 풍경을 지키려는 이들의 숨을 조용히 비춘다. 그리고 마음 한쪽에 이런 문장을 남긴다. “숨을 참아야만 들어갈 수 있는 세계가 있다면, 그
+						세계를 지키는 숨 또한 얼마나 소중한가.”
 					</p>
 					<p>
-						영화의 또 다른 주인공은 사계절의 칠곡 풍경이다. 봄의 쑥, 여름의 장맛비, 겨울 장독대의 눈. 할머니들의 시 한 줄처럼 소박하고 정겨운 풍경들이 스크린 위에 펼쳐진다. 과장되지 않았지만 따뜻한 이 장면들은, 결국 할머니들이 써 내려간 시의 마음과 닮아 있다. 이제 그 시 속 풍경을 따라, 칠곡의 하루로 천천히 걸어가 보자.  
+						그 숨이 이어지는 곳, 삼달리. 지금 우리가 걷게 될 이 마을과 바다는, 영화 속 그들의 삶이 깃든 장소다. 바다에서 시작된 이야기의 여운을 품고, 이제는 삼달리 주변의
+						풍경들을 따라 천천히 발걸음을 옮겨가 보자.
 						<i class="icon_last"></i>
 					</p>
 				</div>
 				<article>
-					<div class="town-box reverse">
+					<div class="town-box">
 						<div class="town-left">
 							<h6>
-								금오산 깊은 골짜기에 숨은 물의 절벽
+								파도 위에서 태어난 산의 전설
 							</h6>
 							<h5>
-								구미 금오산 대혜폭포
+								성산일출봉
 							</h5>
 							<p>
-								비가 부슬부슬 내리던 날, 세 할머니는 구미 금오산으로 향한다. 케이블카를 타고 올라 도착한 대혜폭포 앞, 눈앞에는 웅장한 물줄기가 쏟아지고, 그 앞에 선 할머니들은 잠시 말을 잃는다. “옛날엔 다리도 없었는데… 절만 있었지.” 세월이 흐르며 달라진 풍경을 바라보며, 할머니들은 조용히 옛 시절을 떠올린다.
+								제주도의 일반적인 오름과 달리, 성산일출봉은 바다 속에서 마그마가 분출하며 만들어진 독특한 수성 화산체다. 뜨거운 마그마가 차가운 바닷물을 만나는 순간
+								수증기가 치솟고, 그 과정에서 만들어진 화산재가 촉촉하고 끈끈한 성질을 띠며 층층이 쌓여 지금의 웅장한 형태가 되었다. 탐방로는 무료 구간과 유료 구간으로
+								나뉜다. 유료 탐방로는 정상까지 오르는 길로, 웅대한 분화구를 가장 가까이에서 만날 수 있다. 무료 탐방로는 성산일출봉 아래의 바다와 주변 풍경을 가볍게
+								산책하기 좋다. 오르막이 거의 없어 누구나 편하게 걸음걸음을 즐길 수 있다.
 							</p>
 							<p>
-								대혜폭포는 경상북도 구미시 남통동 금오산 자락, 해발 약 400m 지점에 자리한 높이 28m의 폭포다. 금오산을 울릴 만큼 세차게 떨어지는 물소리 때문에 ‘명금폭포(鳴金瀑布)’라 불리기도 한다. 폭포 아래 넓은 소(沼)는 예로부터 하늘의 선녀가 내려와 목욕을 즐겼다는 전설이 전해져 ‘욕담(浴潭)’ 또는 ‘선녀탕’이라 불린다.
-							</p>
-							<p>
-								등산객이 많은 금오산에 자리한 대혜폭포는 사계절 내내 다른 얼굴을 보여준다. 봄이면 물안개가 피어나고, 여름에는 녹음이 폭포를 감싸며, 가을에는 단풍이 물 위에 흩어지고, 겨울이면 얼음기둥이 절벽을 수놓는다. 또한 폭포 주변에는 도선굴, 약사암, 도리사 등이 자리해 금오산 관광의 백미를 이룬다.
+								정상에 서면 너비 약 8만 평의 커다란 분화구가 그릇처럼 오목하게 펼쳐지고, 안쪽에는 억새가 바람을 따라 일렁인다. 분화구 둘레에는 99개의 작은 봉우리들이
+								옹기종기 둘러서 있는데, 이 모습이 마치 하나의 거대한 성곽 같아 ‘성산(城山)’이라 불리게 되었다. 여기에 일출이 어우러지면 그 장관이 더해져
+								‘일출봉(日出峰)’이라는 이름이 붙었다.
 							</p>
 							<ul>
-								<!-- <li>
-									<span>전화</span>
-									064-728-7783
-								</li> -->
 								<li>
 									<span>주소</span>
-									경상북도 구미시 남통동 산 94
+									제주 서귀포시 성산읍 성산리 1
 								</li>
 							</ul>
 						</div>
@@ -275,6 +319,12 @@ figure.graphic-4 {
 						</div>
 						<figure class="graphic-1 town-graphic">
 							<img src="contents/sub_44_town_graphic_1.png">
+						</figure>
+						<figure class="graphic-2 town-graphic">
+							<img src="contents/sub_44_town_graphic_2.png">
+						</figure>
+						<figure class="graphic-3 town-graphic">
+							<img src="contents/sub_44_town_graphic_3.png">
 						</figure>
 					</div>
 					<div class="article-image big-image bottom-image">
@@ -287,30 +337,29 @@ figure.graphic-4 {
 					<div class="town-box reverse">
 						<div class="town-left">
 							<h6>
-								기억의 통로이자 역사의 풍경
+								바람이 머무는 땅
 							</h6>
 							<h5>
-								왜관철교 & 관호산성 둘레길
+								섭지코지
 							</h5>
 							<p>
-								병원 진료를 마치고 돌아오는 길, 두 할머니는 나란히 다리를 걸으며 대화를 한다. “아따, 물 많다. 참 낙동강이 유명해 그제?” “여기 물을 보니께 어지러운 기분이라” “보지 마라, 물 쳐다보지 마라.” 그 짧은 대화 속에 흘러간 세월과 삶의 무게가 스민다. 다리 너머로 노을이 붉게 번지고, 그 위로 천천히 걸음을 옮기는 두 사람의 모습이 오래 남는다.
+								제주 동부 해안에서 살짝 바다 쪽으로 몸을 내민 섭지코지는 성산일출봉을 정면으로 바라보는 절경의 명소다. 들머리에는 고운 모래가 펼쳐진 신양해변이 있고,
+								끝머리 언덕 위로는 봄이면 노란 유채가 드리운 평원이 부드럽게 이어진다. 그 사이로 제주조랑말들이 여유롭게 풀을 뜯고, 발 아래로는 붉은 화산재 송이가 깔린
+								해안 절벽이 길을 이룬다. 그 위에 우뚝 솟은 전설의 바위, 선바위가 섭지코지의 풍경을 완성한다.
 							</p>
 							<p>
-								이 장면의 배경이 된 곳이 바로 왜관철교다. 경부선의 약목역과 왜관역 사이, 낙동강을 가로지르는 이 철교는 1908년 일본이 대륙 침략을 위해 부설한 군용 철도의 교량이었다. 한때는 수많은 열차가 이곳을 오갔지만, 1941년 새 철교가 놓이면서 인도교로만 사용됐다. 6·25전쟁 당시에는 남하하던 북한군을 저지하기 위해 폭파되며 ‘호국의 다리’라는 이름을 얻었다. 오랜 세월 풍상을 겪은 왜관철교는 안전 문제로 철거 위기에 놓이기도 했지만, 역사적 상징성과 지역민의 염원으로 복원이 결정되어 오늘까지 남아 있다. 지금은 낙동강을 따라 노을을 감상하며 걷기 좋은 산책로로 재탄생해, 칠곡 사람들에게는 기억과 평화의 다리로 자리 잡았다.
+								‘섭지코지’라는 이름은 좁은 땅을 뜻하는 ‘섭지’와, 부리처럼 길게 뻗은 지형을 뜻하는 ‘코지’가 합쳐진 말이다. 한편 지역에서는 ‘섭지’를 재사를 많이
+								배출하는 좋은 기운의 땅이라는 뜻으로 해석하기도 한다. 본래는 곶 끝자락의 절벽만을 지칭했으나 지금은 해안 전체를 아우르는 이름으로 자리 잡았다.
 							</p>
 							<p>
-								철교에서 이어지는 길 끝에는 관호산성이 있다. 삼국시대 신라가 처음 쌓은 토성으로, 동서 약 180m, 폭 50m에 이르는 내성과 북쪽 외성의 흔적이 남아 있다. 낙동강 절벽 위 자연 지형을 그대로 활용해 축조된 이 산성은, 예로부터 전략적 요충지이자 천혜의 방어선이었다. 현재 이곳에는 관호산성 둘레길이 잘 조성되어 있어, 남녀노소 누구나 걸으며 강과 산, 마을의 풍경을 함께 즐길 수 있다. 자연과 역사가 어우러진 대표 탐방 코스다. 
+								그리고 무엇보다, 섭지코지를 더욱 특별하게 만드는 것은 바로 눈앞에서 마주하는 성산일출봉. 어느 계절에 서 있어도 그 장면은 오래도록 마음에 새겨지는 풍경이
+								된다.
 								<i class="icon_last"></i>
 							</p>
 							<ul>
-								<!-- <li>
-									<span>전화</span>
-									064-787-1305
-								</li> -->
 								<li>
 									<span>주소</span>
-									경상북도 칠곡군 왜관읍 석전리<br>
-									칠곡군 약목면 관호2리 산17번지 일원
+									제주 서귀포시 성산읍 고성리
 								</li>
 							</ul>
 						</div>
@@ -318,21 +367,22 @@ figure.graphic-4 {
 							<figure>
 								<img src="contents/sub_44_town_21.jpg">
 							</figure>
-							<figure class="graphic-2 town-graphic">
-								<img src="contents/sub_44_town_graphic_2.png">
-							</figure>
-							<figure class="graphic-3 town-graphic">
-								<img src="contents/sub_44_town_graphic_3.png">
-							</figure>
-							<figure class="graphic-4 town-graphic">
-								<img src="contents/sub_44_town_graphic_4.png">
+							<figure>
+								<img src="contents/sub_44_town_22.jpg">
 							</figure>
 						</div>
+
+						<figure class="graphic-4 town-graphic">
+							<img src="contents/sub_44_town_graphic_4.png">
+						</figure>
+						<figure class="graphic-5 town-graphic">
+							<img src="contents/sub_44_town_graphic_5.png">
+						</figure>
 					</div>
 					<div class="article-image big-image">
 						<div class="article-image-container">
 							<figure>
-								<img src="contents/sub_44_town_22.jpg">
+								<img src="contents/sub_44_town_23.jpg">
 							</figure>
 						</div>
 					</div>
@@ -342,4 +392,5 @@ figure.graphic-4 {
 	</main>
 	<footer class="footer" id="footer"></footer>
 </body>
+
 </html>
